# uwuicy

./: LICENSE  README.md  pyproject.toml
uwuicy/: __main__.py  uwuipy.py
